# IR-ArtForSale

./: .gitignore  README.md  pyproject.toml
Pyterrier example/: pyterrier.py
backend/: .env  db.sqlite3  manage.py
backend/ArtFinderSale/: apps.py
backend/ArtFinderSale/models/: document.py
backend/ArtForSale/: asgi.py  settings.py  urls.py  wsgi.py
crawler/: =0.14.0  artfinder.json  artfinderresult.json  artsyresult.json  index.py  results.json  society6result.json
crawler/crawler/: artsyresult.json  results.json
crawler/index_3docs/: data.direct.bf  data.document.fsarrayfile  data.inverted.bf  data.lexicon.fsomapfile  data.lexicon.fsomaphash  data.lexicon.fsomapid  data.meta-0.fsomapfile  data.meta.idx  data.meta.zdata  data.properties
crawler/index_saatchiart/: data.direct.bf  data.document.fsarrayfile  data.inverted.bf  data.lexicon.fsomapfile  data.lexicon.fsomaphash  data.lexicon.fsomapid  data.meta-0.fsomapfile  data.meta.idx  data.meta.zdata  data.properties
crawler/index_total/: data.direct.bf  data.document.fsarrayfile  data.inverted.bf  data.lexicon.fsomapfile  data.lexicon.fsomaphash  data.lexicon.fsomapid  data.meta-0.fsomapfile  data.meta.idx  data.meta.zdata  data.properties
docs/report/: progress.tex  submission.tex  submission.toc
examples/: ex-pyterrier.py
examples/index_3docs/: data.direct.bf  data.document.fsarrayfile  data.inverted.bf  data.lexicon.fsomapfile  data.lexicon.fsomaphash  data.lexicon.fsomapid  data.properties
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
(+23 files in other folders)
