[tool.poetry]
name = "ir-artforsale"
version = "0.1.0"
description = ""
authors = ["Jeferson Morales Mariciano <jeferson.morales.mariciano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-terrier = "^0.10.0"
pandas = "^2.1.1"
Scrapy = "^2.11.0"
django = "^4.2.7"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
